--- a/index.html
+++ b/index.html
@@ -7,22 +7,11 @@
     <title>Wiki Lang</title>
     <script type="module" src="./componentes/container.js"></script>
     <script type="module" src="./componentes/inputbusca.js"></script>
+    <script type="module" src="./componentes/cabecalho.js"></script>
 </head>
 <body>
     <header>
-        <div class="divTopo">
-            <div class="logoCti">
-                <img src="logo-cti.png" alt="Logo CTI" class="logoCti">
-            </div>
-            <div class="divFotos">
-                <div class="img">
-
-                </div>
-                <div class="img">
-
-                </div>
-            </div>
-        </div>
+       <cabecalho-pagina></cabecalho-pagina>
     </header>
     <main>
             <input-busca></input-busca>
