Atualização da pagina de detalhamento

--- a/detalhes.html
+++ b/detalhes.html
@@ -12,11 +12,7 @@
     <header>
       <cabecalho-pagina></cabecalho-pagina>
     </header>
-    <main>
-      <input-busca></input-busca>
-        <div class="detalheContainer">
-          <img src="logo-ruby.png" alt="JavaScript" class="logoDetalhes">
-        </div>
-    </main>
+    <detalhes-linguagem></detalhes-linguagem>
+    
   </body>
 </html>
