Inclusão do rodapé

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script type="module" src="./componentes/container.js"></script>
     <script type="module" src="./componentes/inputbusca.js"></script>
     <script type="module" src="./componentes/cabecalho.js"></script>
+    <script type="module" src="./componentes/rodape.js"></script>
 </head>
 <body>
     <header>
@@ -17,8 +18,6 @@
             <container-linguagens></container-linguagens>
          
     </main>
-
-
-
+    <rodape-pagina></rodape-pagina>
 </body>
 </html>
