--- a/detalhes.html
+++ b/detalhes.html
@@ -7,12 +7,13 @@
     <script type="module" src="./componentes/detalhes.js"></script>
     <script type="module" src="./componentes/cabecalho.js"></script>
     <script type="module" src="./componentes/inputbusca.js"></script>
+    <script type="module" src="./componentes/rodape.js"></script>
   </head>
   <body>
     <header>
       <cabecalho-pagina></cabecalho-pagina>
     </header>
     <detalhes-linguagem></detalhes-linguagem>
-    
+    <rodape-pagina></rodape-pagina>
   </body>
 </html>
